update recyclerview list processing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,12 @@
         </receiver>
         <receiver android:name=".services.NotificationActionService" />
         <service android:name=".services.OnClearFromRecentService" />
+        <service android:name=".services.MediaPlaybackService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.media.browse.MediaBrowserService" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
